@@ -51,7 +51,6 @@ G_BEGIN_DECLS
 #define TWITUX_PREFS_UI_NOTIFICATION          TWITUX_PREFS_PATH "/ui/notify"
 #define TWITUX_PREFS_UI_SPELL_LANGUAGES       TWITUX_PREFS_PATH "/ui/spell_checker_languages"
 #define TWITUX_PREFS_UI_SPELL                 TWITUX_PREFS_PATH "/ui/spell"
-#define TWITUX_PREFS_UI_STATUSBAR             TWITUX_PREFS_PATH "/ui/statusbar"
 
 /* Proxy configuration */
 #define TWITUX_PROXY                          "/system/http_proxy"
