@@ -1,3 +1,8 @@
+2007-10-18  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* src/twitux.h: 
+	* data/twitux.schemas.in: remove gconf key for statusbar.
+
 2007-20-18  Daniel Morales  <daniminas@gmail.com>
 
 	* src/twitux-add-dialog.[ch]:
